Adjusting layout of shipping address box. Initially tried to put edit btn in bottom right corner but conflicts with 'ship to address' btn on mobile, so have combined it with the delete btn in a button group. Issue #1332

--- a/oscar/static/oscar/css/styles.css
+++ b/oscar/static/oscar/css/styles.css
@@ -7976,7 +7976,7 @@ input[type="number"][id*="quantity"] {
   bottom: 20px;
   left: 20px;
 }
-.choose-block .btn-remove-address {
+.choose-block .address-controls {
   position: absolute;
   top: 20px;
   right: 20px;
